generate for the report web api and add base controller

--- a/Eymyuvaman/Eymyuvaman/appsettings.json
+++ b/Eymyuvaman/Eymyuvaman/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=BHAUMIK;Database=eymyuvaman;TrustServerCertificate=True;Encrypt=False;Integrated Security=True;"
+    "DefaultConnection": "Server=BHAUMIK;Database=Eym;TrustServerCertificate=True;Encrypt=False;Integrated Security=True;"
   },
   "Token": {
     "ExpiredTime": 60
